--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Hello World!</title>
+<title>Hello Yarakfamilia!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <style type="text/css" media="screen">
 /* Google Fonts */
@@ -46,8 +46,8 @@ h1 {
 
 <body>
 <div class="main">
-<h1>Hello World!</h1>
-<p>This is my first Handshake site!</p>
+<h1>Hello Yarakfamilia!</h1>
+<p>Yarak Yarak ein hoch auf den Vosi und alle Yaraklar!</p>
 </div>
 </body>
 </html>
